--- a/about.html
+++ b/about.html
@@ -19,13 +19,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Established in 2017 &dash; Phaneretic Services (Phanserv) is a leading geotechnical solutions and services provider in South Africa, renowned for its team of qualified engineering geologists and professional civil technicians...
+    <meta name="description" content="Established in 2017 &dash; Phaneretic Services (Phanserv) is a leading 
+    geotechnical solutions and services provider in South Africa, renowned for its team of qualified engineering 
+    geologists...
 
 ">
     <meta name="keywords"
-        content="Geotechnical Investigations,Borehole and Exploration Drilling,including rural,township,and urban development,Concrete Strength Testing,Trial Pit Profiling and Excavations,Water Quality Testing,Borehole and Exploration Drilling,Environmental Impact Assessments and Audits,Rural,Township,and Urban Development,Foundation Analysis,DCP, DPL, and DPSH Testing,Borehole Core Profiling or Percussion Chip Logging">
+        content="geo-technical around Eastern Cape &dash; Geotechnical Investigations 
+        &dash; Geologists around Umtata &dash; Borehole and Exploration Drilling 
+        &dash; rural township and urban development &dash; Concrete Strength Testing
+         &dash; Trial Pit Profiling and Excavations &dash; Water Quality Testing &dash; 
+         Borehole and Exploration Drilling &dash; Environmental Impact Assessments and Audits &dash; 
+         Rural,Township,and Urban Development &dash; Foundation Analysis DCP, DPL, and DPSH Testing
+         &dash; Borehole Core Profiling &dash; Percussion Chip Logging">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="/Assets/css/aos.css">
+
+    <!-- twitter -->
+    <meta name="twitter:title" content="About Phanserv geotechnical services and solutions south africa" />
+    <meta name="twitter:description"
+        content="Established in 2017 &dash; Phaneretic Services (Phanserv) is a leading 
+        geotechnical solutions and services provider in South Africa, renowned for its team of qualified engineering 
+        geologists..." />
+    <meta name="twitter:image" content="https://phanserve.co.za/Assets/images/img2.jpg" />
+
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org/",
+            "@type": "LocalBusiness",
+            "name": "Phaneretic services (Pty) Ltd",
+            "image": "",
+            "telephone": "+27835132008",
+            "url": "https://phanserve.co.za",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "22 Gerald Spilkin Street",
+                "addressLocality": "Ikhwezi Township, Umtata",
+                "addressRegion": "Eastern cape",
+                "postalCode": "5099",
+                "addressCountry": "South Africa"
+            },
+            "openingHoursSpecification": [
+                {
+                    "@type": "OpeningHoursSpecification",
+                    "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+                    "opens": "09:00",
+                    "closes": "18:00"
+                }
+            ]
+        }
+    </script>
+
+    <meta property="og:type" content="business.business">
+    <meta property="og:title" content="About Phanserv geotechnical services and solutions south africa">
+    <meta property="og:url" content="https://phanserve.co.za">
+    <meta property="og:image" content="https://phanserve.co.za/Assets/images/img2.jpg">
+    <meta property="business:contact_data:street_address" content="22 Gerald Spilkin Street">
+    <meta property="business:contact_data:locality" content="Ikhwezi Township, Umtata">
+    <meta property="business:contact_data:region" content="Eastern cape">
+    <meta property="business:contact_data:postal_code" content="5099">
+    <meta property="business:contact_data:country_name" content="South Africa">
 
     <meta name="title" content="About Phanserv geotechnical services and solutions south africa">
     <title>About Phanserv geotechnical services and solutions south africa</title>
@@ -104,7 +158,7 @@
 
         </div>
     </header>
-    <main>
+    <main class="overflow-hidden">
         <section class="w-full pb-20 font-open_sans">
             <div class="w-full h-[28.125rem] overflow-hidden relative">
                 <div class="overlay w-full h-full top-0 bg-[rgba(25,36,56,0.52)] left-0 absolute "></div>
@@ -455,7 +509,7 @@
                                 Email Us:
                             </h4>
                             <div>
-                                <a href="" id="contact-email" class="block text-sm  md:text-base font-normal text-white">
+                                <a href="" id="contact-email-" class="block text-sm  md:text-base font-normal text-white">
                                     info@phanserv.co.za
                                 </a>
                                 <a href="" id="contact-email-2" class="block text-sm md:text-base  font-normal text-white">
@@ -497,7 +551,7 @@
 
                 <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="500" class="footer-brand">
 
-                    <a href="#" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
+                    <a href="/index" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
 
                     <p class="footer-text" style="margin-block: 10px 30px;">
                         We take pride in our service track record, and we are confident we can exceed your
@@ -508,18 +562,19 @@
                     <ul class="flex gap-3">
 
                         <li>
-                            <a href="#" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
+                            <a href="https://web.facebook.com/Phanserv/?_rdc=1&_rdr" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
                                 <i class="bx bxl-facebook"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="" id="contact-email" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
+                            <a href="" id="contact-email-4"
+                                class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
                                 <i class="bx bx-envelope"></i>
                             </a>
                         </li>
 
-                        
+
 
                     </ul>
 
@@ -588,18 +643,18 @@
                     </li>
 
                     <li>
-                        <a href="./index.html" class="">22 Gerald Spilkin Street, Umtata, 5099</a>
+                        <p class="">22 Gerald Spilkin Street, Umtata, 5099</p>
                     </li>
 
                     <li>
-                        <a href="" id="contact-email" class="">info@phanserv.co.za</a>
+                        <a href="" id="contact-email-5">info@phanserv.co.za</a>
                     </li>
                     <li>
-                        <a href="" class="contact-email">+27835132008</a>
+                        <p class="contact-emal">+27835132008</p>
                     </li>
 
                     <li>
-                        <a href="#" class="">Company Profile</a>
+                        <a href="./about.html" class="">Company Profile</a>
                     </li>
 
 
@@ -612,7 +667,7 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wethink_</a>
+                    by <a href="#" class="">wethink_</a>  |  <a href="./terms.html">Terms & Conditions</a>  |  &boxh;<a href="/privacy.html">Privacy Policy</a>
                 </p>
             </div>
 
@@ -621,6 +676,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="/Assets/js/aos.js"></script>
     <script>
         AOS.init({
             offset: 30
