--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,53 @@
     <meta name="description"
         content="Our qualified and competent team is read to help you with you Geotechnology project. We are Committed to...">
         <meta name="keywords"
-        content="Soil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis &dash; Soil Excavations &dash; Soil Profiling &dash; Rural, Township, and Urban Development &dash; Borehole and Exploration Drilling &dash; DCP Testing &dash; MOD AASHTO and Moisture &dash; CBR Bearing Pressure &dash; Soil Poisoning &dash; Road &dash; Layerworks &dash; Earthworks &dash; Compaction Testing &dash; Cement Content Analysis &dash; Stabilised Aggregate Analysis &dash; Asphalt Core Drilling &dash; ; Rock Aggregate Analysis &dash; Quarry Aggregate Analysis &dash; Geotechnical Investigations &dash; Soil Report Datasets &dash; Tender Monitoring and Evaluation &dash; Independent Research AnalysisSoil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning &dash; Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis- KwaZulu Natal &dash; Orange Free State &dash; Gauteng &dash; Cape Regions &dash; Durban &dash; Ballito &dash; Margate &dash; South Coast &dash; Tongaat &dash; Musgrave &dash; Gateway &dash;  Ramsgate &dash; Shelly Beach &dash; Stanger &dash; Melmoth &dash; Ulundi &dash; Pietermaritzburg &dash; Ladysmith &dash; Estcourt &dash; Newcastle &dash; Volksrust &dash;  Dundee &dash; Midlands &dash; Harrismith &dash; QwaQwa &dash; Drakensberg &dash; Clarens &dash; Bethlehem &dash; Warden &dash;  Kestel &dash; Reitz &dash; Vereeniging &dash; Welkom &dash; Villiers &dash; Umtata &dash; Johannesburg &dash; Pretoria &dash; Bloemfontein" />
+        content="Contact phanserv &dash; contact Phaneretic services (pty) ltd &dash; geo-technical services umtata &dash; Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis &dash; Soil Excavations &dash; Soil Profiling &dash; Rural, Township, and Urban Development &dash; Borehole and Exploration Drilling &dash; DCP Testing &dash; MOD AASHTO and Moisture &dash; CBR Bearing Pressure &dash; Soil Poisoning &dash; Road &dash; Layerworks &dash; Earthworks &dash; Compaction Testing &dash; Cement Content Analysis &dash; Stabilised Aggregate Analysis &dash; Asphalt Core Drilling &dash; ; Rock Aggregate Analysis &dash; Quarry Aggregate Analysis &dash; Geotechnical Investigations &dash; Soil Report Datasets &dash; Tender Monitoring and Evaluation &dash; Independent Research AnalysisSoil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning &dash; Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis- KwaZulu Natal &dash; Orange Free State &dash; Gauteng &dash; Cape Regions &dash; Durban &dash; Ballito &dash; Margate &dash; South Coast &dash; Tongaat &dash; Musgrave &dash; Gateway &dash;  Ramsgate &dash; Shelly Beach &dash; Stanger &dash; Melmoth &dash; Ulundi &dash; Pietermaritzburg &dash; Ladysmith &dash; Estcourt &dash; Newcastle &dash; Volksrust &dash;  Dundee &dash; Midlands &dash; Harrismith &dash; QwaQwa &dash; Drakensberg &dash; Clarens &dash; Bethlehem &dash; Warden &dash;  Kestel &dash; Reitz &dash; Vereeniging &dash; Welkom &dash; Villiers &dash; Umtata &dash; Johannesburg &dash; Pretoria &dash; Bloemfontein" />
     
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="/Assets/css/aos.css">
+
+    <!-- twitter -->
+    <meta name="twitter:title" content="Contact Phanserv Geotechnical Solutions South Africa" />
+    <meta name="twitter:description"
+        content="Our qualified and competent team is read to help you with you Geotechnology project. We are Committed to..." />
+    <meta name="twitter:image" content="https://phanserve.co.za/Assets/images/img2.jpg" />
+
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org/",
+            "@type": "LocalBusiness",
+            "name": "Phaneretic services (Pty) Ltd",
+            "image": "",
+            "telephone": "+27835132008",
+            "url": "https://phanserve.co.za",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "22 Gerald Spilkin Street",
+                "addressLocality": "Ikhwezi Township, Umtata",
+                "addressRegion": "Eastern cape",
+                "postalCode": "5099",
+                "addressCountry": "South Africa"
+            },
+            "openingHoursSpecification": [
+                {
+                    "@type": "OpeningHoursSpecification",
+                    "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+                    "opens": "09:00",
+                    "closes": "18:00"
+                }
+            ]
+        }
+    </script>
+
+    <meta property="og:type" content="business.business">
+    <meta property="og:title" content="Contact Phanserv Geotechnical Solutions South Africa">
+    <meta property="og:url" content="https://phanserve.co.za">
+    <meta property="og:image" content="https://phanserve.co.za/Assets/images/img2.jpg">
+    <meta property="business:contact_data:street_address" content="22 Gerald Spilkin Street">
+    <meta property="business:contact_data:locality" content="Ikhwezi Township, Umtata">
+    <meta property="business:contact_data:region" content="Eastern cape">
+    <meta property="business:contact_data:postal_code" content="5099">
+    <meta property="business:contact_data:country_name" content="South Africa">
 
     <title>Contact phanserv for your next Geotech project</title>
 </head>
@@ -239,7 +283,7 @@
                                 Email Us:
                             </h4>
                             <div>
-                                <a href="" id="contact-email" class="block text-sm  md:text-base font-normal text-white">
+                                <a href="" id="contact-email-" class="block text-sm  md:text-base font-normal text-white">
                                     info@phanserv.co.za
                                 </a>
                                 <a href="" id="contact-email-2" class="block text-sm md:text-base  font-normal text-white">
@@ -281,7 +325,7 @@
 
                 <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="500" class="footer-brand">
 
-                    <a href="#" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
+                    <a href="/index" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
 
                     <p class="footer-text" style="margin-block: 10px 30px;">
                         We take pride in our service track record, and we are confident we can exceed your
@@ -292,18 +336,19 @@
                     <ul class="flex gap-3">
 
                         <li>
-                            <a href="#" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
+                            <a href="https://web.facebook.com/Phanserv/?_rdc=1&_rdr" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
                                 <i class="bx bxl-facebook"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="" id="contact-email" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
+                            <a href="" id="contact-email-4"
+                                class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
                                 <i class="bx bx-envelope"></i>
                             </a>
                         </li>
 
-                        
+
 
                     </ul>
 
@@ -372,18 +417,18 @@
                     </li>
 
                     <li>
-                        <a href="#" class="">22 Gerald Spilkin Street, Umtata, 5099</a>
+                        <p class="">22 Gerald Spilkin Street, Umtata, 5099</p>
                     </li>
 
                     <li>
-                        <a href="" class="contact-email">info@phanserv.co.za</a>
+                        <a href="" id="contact-email-5">info@phanserv.co.za</a>
                     </li>
                     <li>
-                        <a href="" class="contact-email">+27835132008</a>
+                        <p class="contact-emal">+27835132008</p>
                     </li>
 
                     <li>
-                        <a href="#" class="">Company Profile</a>
+                        <a href="./about.html" class="">Company Profile</a>
                     </li>
 
 
@@ -396,7 +441,7 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wethink_</a>
+                    by <a href="#" class="">wethink_</a>  |  <a href="./terms.html">Terms & Conditions</a>  |  &boxh;<a href="/privacy.html">Privacy Policy</a>
                 </p>
             </div>
 
@@ -406,6 +451,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="/Assets/js/aos.js"></script>
     <script>
         AOS.init({
             offset: 30
