--- a/index.html
+++ b/index.html
@@ -13,17 +13,66 @@
     <link rel="stylesheet" href="/Assets/fonts/stylesheet.css">
     <link rel="stylesheet" href="/Assets/css/style.css">
     <link rel="stylesheet" href="/Assets/css/style_tailwind.css">
+    <link rel="stylesheet" href="/Assets/css/aos.css">
 
     <link rel="shortcut icon" href="/Assets/images/favicon.ico" type="image/x-icon">
     <!-- ============================ META ============================= -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="A Specialist Geotechnical Solutions Company With a Team of Qualified And Competent Engineering Geologists And Professional Civil Technician, Which Work Closely Together To Provide a Geotechnical Services Which Far Exceed The Industry Standards. We Are Committed To Provide...">
+    <meta name="description" content="Phaneretic Services is a premier geotechnical solutions provider in South Africa, offering an extensive
+        range of services to cater to diverse project needs...">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="keywords"
+        content="Geologists around Eastern Cape &dash; geotechnical solutions umtata &dash; geo-technical services south africa &dash; Phaneretic services &dash;  Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis &dash; Soil Excavations &dash; Soil Profiling &dash; Rural, Township, and Urban Development &dash; Borehole and Exploration Drilling &dash; DCP Testing &dash; MOD AASHTO and Moisture &dash; CBR Bearing Pressure &dash; Soil Poisoning &dash; Road &dash; Layerworks &dash; Earthworks &dash; Compaction Testing &dash; Cement Content Analysis &dash; Stabilised Aggregate Analysis &dash; Asphalt Core Drilling &dash; Rock Aggregate Analysis &dash; Quarry Aggregate Analysis &dash; Geotechnical Investigations &dash; Soil Report Datasets &dash; Tender Monitoring and Evaluation &dash; Independent Research AnalysisSoil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning &dash; Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis- KwaZulu Natal &dash; Orange Free State &dash; Gauteng &dash; Cape Regions &dash; Durban &dash; Ballito &dash; Margate &dash; South Coast &dash; Tongaat &dash; Musgrave &dash; Gateway &dash;  Ramsgate &dash; Shelly Beach &dash; Stanger &dash; Melmoth &dash; Ulundi &dash; Pietermaritzburg &dash; Ladysmith &dash; Estcourt &dash; Newcastle &dash; Volksrust &dash;  Dundee &dash; Midlands &dash; Harrismith &dash; QwaQwa &dash; Drakensberg &dash; Clarens &dash; Bethlehem &dash; Warden &dash;  Kestel &dash; Reitz &dash; Vereeniging &dash; Welkom &dash; Villiers &dash; Umtata &dash; Johannesburg &dash; Pretoria &dash; Bloemfontein" />
 
-    <title>Phanserv Geotechnical Solutions Africa</title>
+
+    <!-- twitter -->
+    <meta name="twitter:title" content="Phanserv Geotechnical Solutions South Africa" />
+    <meta name="twitter:description"
+        content="Phaneretic Services is a premier geotechnical solutions provider in South Africa, offering an extensive
+        range of services to cater to diverse project needs..." />
+    <meta name="twitter:image" content="https://phanserve.co.za/Assets/images/img2.jpg" />
+
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org/",
+            "@type": "LocalBusiness",
+            "name": "Phaneretic services (Pty) Ltd",
+            "image": "",
+            "telephone": "+27835132008",
+            "url": "https://phanserve.co.za",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "22 Gerald Spilkin Street",
+                "addressLocality": "Ikhwezi Township, Umtata",
+                "addressRegion": "Eastern cape",
+                "postalCode": "5099",
+                "addressCountry": "South Africa"
+            },
+            "openingHoursSpecification": [
+                {
+                    "@type": "OpeningHoursSpecification",
+                    "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+                    "opens": "09:00",
+                    "closes": "18:00"
+                }
+            ]
+        }
+    </script>
+
+    <meta property="og:type" content="business.business">
+    <meta property="og:title" content="Phanserv Geotechnical Solutions South Africa">
+    <meta property="og:url" content="https://phanserve.co.za">
+    <meta property="og:image" content="https://phanserve.co.za/Assets/images/img2.jpg">
+    <meta property="business:contact_data:street_address" content="22 Gerald Spilkin Street">
+    <meta property="business:contact_data:locality" content="Ikhwezi Township, Umtata">
+    <meta property="business:contact_data:region" content="Eastern cape">
+    <meta property="business:contact_data:postal_code" content="5099">
+    <meta property="business:contact_data:country_name" content="South Africa">
+
+
+    <title>Phanserv Geotechnical Solutions South Africa</title>
 </head>
 
 <body>
@@ -104,7 +153,8 @@
                 <div class="overlay w-full h-full top-0 bg-[rgba(0,0,0,0.66)] left-0 absolute "></div>
                 <div class="w-full h-full">
                     <div class="w-full h-full">
-                        <img src="/Assets/images/img4.jpg" alt="phanserv wall construction" class="object-cover w-full h-full">
+                        <img src="/Assets/images/img4.jpg" alt="phanserv wall construction"
+                            class="object-cover w-full h-full">
                         <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000"
                             class="absolute top-[40%] mx-9 md:mx-[7.5rem] font-open_sans space-y-5 md:w-[55.25rem]">
                             <div data-aos="fade-left" data-aos-easing="ease-in-sine" data-aos-duration="1500"
@@ -326,7 +376,7 @@
             <div class="h-full" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
                 <div class="flex items-center flex-row">
                     <div class="bg-custom-blue text-start md:flex-[0.5] h-full md:h-screen">
-                        <div class="space-y-5 text-white mx-14 md:mx-24 my-10 relative md:space-y-7">
+                        <div class="space-y-5 text-white mx-8 md:mx-24 my-10 relative md:space-y-7">
                             <span class="font-bold text-sm md:text-md text-custom-orange font-open_sans">
                                 WHY CHOOSE US?
                             </span>
@@ -359,16 +409,19 @@
                     </div>
                     <div
                         class="md:flex-[0.5] overflow-hidden hidden relative md:block md:h-screen border-2 border-custom-orange border-solid">
-                        <img src="/Assets/images/about-3.jpg" alt="construction analysis" class=" md:h-screen md:w-full object-cover" />
+                        <img src="/Assets/images/about-3.jpg" alt="construction analysis"
+                            class=" md:h-screen md:w-full object-cover" />
                         <div class="absolute top-1/2 space-y-6 -translate-y-1/2">
                             <div class="bg-custom-orange text-white p-6">
-                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300" class="space-y-3 grid">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300"
+                                    class="space-y-3 grid">
                                     <strong class="text-3xl font-bold">63</strong>
                                     <span class="text-lg uppercase">Projects Completed</span>
                                 </div>
                             </div>
                             <div class="bg-white text-custom-blue p-6">
-                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600" class="space-y-3 grid">
+                                <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600"
+                                    class="space-y-3 grid">
                                     <strong class="text-3xl font-bold">20</strong>
                                     <span class="text-lg uppercase">HAPPY CUSTOMERS</span>
                                 </div>
@@ -525,10 +578,12 @@
                                 Email Us:
                             </h4>
                             <div>
-                                <a href="" id="contact-email" class="block text-sm  md:text-base font-normal text-white">
+                                <a href="" id="contact-email-"
+                                    class="block text-sm  md:text-base font-normal text-white">
                                     info@phanserv.co.za
                                 </a>
-                                <a href="" id="contact-email-2" class="block text-sm md:text-base  font-normal text-white">
+                                <a href="" id="contact-email-2"
+                                    class="block text-sm md:text-base  font-normal text-white">
                                     accounts@phanserv.co.za
                                 </a>
                             </div>
@@ -567,7 +622,7 @@
 
                 <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="500" class="footer-brand">
 
-                    <a href="#" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
+                    <a href="/index" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
 
                     <p class="footer-text" style="margin-block: 10px 30px;">
                         We take pride in our service track record, and we are confident we can exceed your
@@ -578,13 +633,14 @@
                     <ul class="flex gap-3">
 
                         <li>
-                            <a href="#" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
+                            <a href="https://web.facebook.com/Phanserv/?_rdc=1&_rdr"
+                                class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
                                 <i class="bx bxl-facebook"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="" id="contact-email"
+                            <a href="" id="contact-email-4"
                                 class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
                                 <i class="bx bx-envelope"></i>
                             </a>
@@ -659,18 +715,18 @@
                     </li>
 
                     <li>
-                        <a href="#" class="">22 Gerald Spilkin Street, Umtata, 5099</a>
+                        <p class="">22 Gerald Spilkin Street, Umtata, 5099</p>
                     </li>
 
                     <li>
-                        <a href="" id="contact-email" class="">info@phanserv.co.za</a>
+                        <a href="" id="contact-email-5">info@phanserv.co.za</a>
                     </li>
                     <li>
-                        <a href="" class="contact-email">+27835132008</a>
+                        <p class="contact-emal">+27835132008</p>
                     </li>
 
                     <li>
-                        <a href="#" class="">Company Profile</a>
+                        <a href="./about.html" class="">Company Profile</a>
                     </li>
 
 
@@ -683,7 +739,8 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wethink_</a>  |  <a href="./terms.html">Terms & Conditions</a>  |  &boxh;<a href="./terms.html">Privacy Policy</a>
+                    by <a href="#" class="">wethink_</a> | <a href="./terms.html">Terms & Conditions</a> | &boxh;<a
+                        href="/privacy.html">Privacy Policy</a>
                 </p>
             </div>
 
@@ -692,6 +749,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./Assets/js/aos.js"></script>
     <script>
         AOS.init({
             offset: 30
