--- a/services.html
+++ b/services.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/Assets/css/style_tailwind.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="/Assets/css/aos.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&family=Rubik:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
@@ -20,13 +21,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
-        content="Soil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis &dash; Soil Excavations &dash; Soil Profiling &dash; Rural, Township, and Urban Development &dash; Borehole and Exploration Drilling &dash; DCP Testing &dash; MOD AASHTO and Moisture &dash; CBR Bearing Pressure &dash; Soil Poisoning &dash; Road &dash; Layerworks &dash; Earthworks &dash; Compaction Testing &dash; Cement Content Analysis &dash; Stabilised Aggregate Analysis &dash; Asphalt Core Drilling &dash; Rock Aggregate Analysis – Quarry Aggregate Analysis &dash; Geotechnical Investigations – Soil Report Datasets – Tender Monitoring and Evaluation – Independent Research AnalysisSoil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning &dash; Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis- KwaZulu Natal &dash; Orange Free State &dash; Gauteng &dash; Cape Regions &dash; Durban &dash; Ballito &dash; Margate &dash; South Coast &dash; Tongaat &dash; Musgrave &dash; Gateway &dash;  Ramsgate &dash; Shelly Beach &dash; Stanger &dash; Melmoth &dash; Ulundi &dash; Pietermaritzburg &dash; Ladysmith &dash; Estcourt &dash; Newcastle &dash; Volksrust &dash;  Dundee &dash; Midlands &dash; Harrismith &dash; QwaQwa &dash; Drakensberg &dash; Clarens &dash; Bethlehem &dash; Warden &dash;  Kestel &dash; Reitz &dash; Vereeniging &dash; Welkom &dash; Villiers &dash; Umtata &dash; Johannesburg &dash; Pretoria &dash; Bloemfontein" />
+        content="Soil Testing &dash; Geotechnical Investigations &dash; Geologists around Eastern Cape &dash; geo-technical solutions south africa &dash;  Compaction Testing &dash; Soil Poisoning Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis &dash; Soil Excavations &dash; Soil Profiling &dash; Rural, Township, and Urban Development &dash; Borehole and Exploration Drilling &dash; DCP Testing &dash; MOD AASHTO and Moisture &dash; CBR Bearing Pressure &dash; Soil Poisoning &dash; Road &dash; Layerworks &dash; Earthworks &dash; Compaction Testing &dash; Cement Content Analysis &dash; Stabilised Aggregate Analysis &dash; Asphalt Core Drilling &dash; Rock Aggregate Analysis – Quarry Aggregate Analysis &dash; Geotechnical Investigations – Soil Report Datasets – Tender Monitoring and Evaluation – Independent Research AnalysisSoil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning &dash; Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis- KwaZulu Natal &dash; Orange Free State &dash; Gauteng &dash; Cape Regions &dash; Durban &dash; Ballito &dash; Margate &dash; South Coast &dash; Tongaat &dash; Musgrave &dash; Gateway &dash;  Ramsgate &dash; Shelly Beach &dash; Stanger &dash; Melmoth &dash; Ulundi &dash; Pietermaritzburg &dash; Ladysmith &dash; Estcourt &dash; Newcastle &dash; Volksrust &dash;  Dundee &dash; Midlands &dash; Harrismith &dash; QwaQwa &dash; Drakensberg &dash; Clarens &dash; Bethlehem &dash; Warden &dash;  Kestel &dash; Reitz &dash; Vereeniging &dash; Welkom &dash; Villiers &dash; Umtata &dash; Johannesburg &dash; Pretoria &dash; Bloemfontein" />
     <meta name="description" content="Phanserv's comprehensive range of geotechnical services, coupled with their team's expertise and commitment to excellence, make them the trusted choice for successful and reliable project outcomes across various industries in South Africa...
     
     ">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="twitter:title" content="Geotechnical Services We Provide &dash; Phanserv Geotechnical" />
+    <meta name="twitter:description"
+        content=" Phanserv's comprehensive range of geotechnical services, coupled with their team's expertise and commitment to excellence, make them the trusted choice for successful and reliable project outcomes.." />
+    <meta name="twitter:image" content="https://phanserve.co.za/Assets/images/img2.jpg" />
 
-    <title>Geotechnical Services We Provide &dash; Phanserv Geotechnical Solutions South Africa</title>
+    <meta property="og:type" content="business.business">
+    <meta property="og:title" content="Geotechnical Services We Provide &dash; Phanserv Geotechnical">
+    <meta property="og:url" content="https://phanserve.co.za">
+    <meta property="og:image" content="https://phanserve.co.za/Assets/images/img2.jpg">
+    <meta property="business:contact_data:street_address" content="22 Gerald Spilkin Street">
+    <meta property="business:contact_data:locality" content="Ikhwezi Township, Umtata">
+    <meta property="business:contact_data:region" content="Eastern cape">
+    <meta property="business:contact_data:postal_code" content="5099">
+    <meta property="business:contact_data:country_name" content="South Africa">
+
+    <title>Geotechnical Services We Provide &dash; Phanserv Geotechnical</title>
 </head>
 
 <body>
@@ -107,7 +122,8 @@
                 <div class="overlay w-full h-full top-0 bg-[rgba(0,0,0,0.66)] left-0 absolute "></div>
                 <div class="w-full h-full ">
                     <div class="w-full h-full">
-                        <img src="/Assets/images/img4.jpg" alt="phanserv wall construction" class="object-cover w-full h-full">
+                        <img src="/Assets/images/img4.jpg" alt="phanserv wall construction"
+                            class="object-cover w-full h-full">
                         <div class="absolute top-[60%] left-[30%]  mx-9 md:mx-[7.5rem] font-open_sans space-y-5">
 
                             <span class="font-extrabold text-3xl md:text-6xl font-open_sans text-white">Our
@@ -337,7 +353,8 @@
         <section class="w-full pb-20 h-screen md:h-72 relative">
             <div class="w-full relative h-full  overflow-hidden">
                 <div class="overlay w-full h-full top-0 bg-[rgba(19,29,47,0.77)] left-0 absolute "></div>
-                <img src="/Assets/images/img3.jpg" alt="phanserv bore hole drilling" class="w-full h-full object-cover" />
+                <img src="/Assets/images/img3.jpg" alt="phanserv bore hole drilling"
+                    class="w-full h-full object-cover" />
                 <div class="absolute top-2/4 left-2/4 translate-x-[-50%] translate-y-[-50%]">
                     <div
                         class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 items-center justify-between gap-7 sm:gap-20 w-full">
@@ -441,10 +458,12 @@
                                 Email Us:
                             </h4>
                             <div>
-                                <a href="" id="contact-email" class="block text-sm  md:text-base font-normal text-white">
+                                <a href="" id="contact-email-"
+                                    class="block text-sm  md:text-base font-normal text-white">
                                     info@phanserv.co.za
                                 </a>
-                                <a href="" id="contact-email-2" class="block text-sm md:text-base  font-normal text-white">
+                                <a href="" id="contact-email-2"
+                                    class="block text-sm md:text-base  font-normal text-white">
                                     accounts@phanserv.co.za
                                 </a>
                             </div>
@@ -483,7 +502,7 @@
 
                 <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="500" class="footer-brand">
 
-                    <a href="#" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
+                    <a href="/index" class="text-2xl font-open_sans text-white font-bold">Phaneretic Services</a>
 
                     <p class="footer-text" style="margin-block: 10px 30px;">
                         We take pride in our service track record, and we are confident we can exceed your
@@ -494,13 +513,14 @@
                     <ul class="flex gap-3">
 
                         <li>
-                            <a href="#" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
+                            <a href="https://web.facebook.com/Phanserv/?_rdc=1&_rdr"
+                                class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
                                 <i class="bx bxl-facebook"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="" id="contact-email"
+                            <a href="" id="contact-email-4"
                                 class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
                                 <i class="bx bx-envelope"></i>
                             </a>
@@ -575,18 +595,18 @@
                     </li>
 
                     <li>
-                        <a href="#" class="">22 Gerald Spilkin Street, Umtata, 5099</a>
+                        <p class="">22 Gerald Spilkin Street, Umtata, 5099</p>
                     </li>
 
                     <li>
-                        <a href="" class="contact-email">info@phanserv.co.za</a>
+                        <a href="" id="contact-email-5">info@phanserv.co.za</a>
                     </li>
                     <li>
-                        <a href="" class="contact-email">+27835132008</a>
+                        <p class="contact-emal">+27835132008</p>
                     </li>
 
                     <li>
-                        <a href="#" class="">Company Profile</a>
+                        <a href="./about.html" class="">Company Profile</a>
                     </li>
 
 
@@ -599,7 +619,8 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wethink_</a>
+                    by <a href="#" class="">wethink_</a> | <a href="./terms.html">Terms & Conditions</a> | &boxh;<a
+                        href="/privacy.html">Privacy Policy</a>
                 </p>
             </div>
 
